# ARCH-DOCUMENT-APP

./: .dockerignore  .gitignore  ARCH DOCUMENT APP.code-workspace  Dockerfile.app  Dockerfile.redaction  Dockerfile.vlm  PIPELINE_GUIDE.md  QA_PIPELINE_GUIDE.md  README.md  config.py  doc_editor.py  docker-compose.yml  file_utils.py  google_ocr_2.py  main.py  pdf_processor.py  requirements.txt  run_manual_redaction.sh  run_preprocess.sh  run_redaction_app.sh  simple_agent.ipynb  simple_agent.py  start.sh  transcription.py
Project Files/: 1-2026-DANE.xlsx  935 wniosek_ocr.txt  EXTRACTED-DATA-TEMPLATE.xlsx  output_935.xlsx
Project Files/output/: 935_wniosek_ocr.txt  938_wniosek_ocr.txt  940_wniosek__SAMA_PANI_MAGDA_ocr.txt  945_wniosek_ocr.txt  948_wniosek_ocr.txt  949_wniosek_ocr.txt  output_935_wniosek.xlsx  output_938_wniosek.xlsx  output_940_wniosek__SAMA_PANI_MAGDA.xlsx  output_945_wniosek.xlsx  output_948_wniosek.xlsx  output_949_wniosek.xlsx
app/: APP_GUIDE.md  excel_utils.py  requirements.txt  server.py
app/static/: app.js  index.html  style.css
demo_app/: README.md  config.example.yaml  requirements.txt
demo_app/extractor_demo/: cli.py  config.py  (+1 more)
finetune_qwen_vl_pytorch/: README.md  requirements.txt
finetune_qwen_vl_qa/: FINETUNING_GUIDE.md  requirements.txt
manual_redaction/: MANUAL_REDACTION_GUIDE.md  app.py
redaction_tool/: README.md  app.py  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
redaction_tool/redaction_tool/: redactor.py
redaction_tool/static/: index.html
requirements/: app.txt  redaction.txt  vlm.txt
(+20 files in other folders)
