[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redaction-tool"
version = "0.1.0"
description = "Batch PDF redaction using OCR/layout rules (OpenClaw preprocessing)."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["redaction_tool*"]

